--- a/core/web/static/css/style.css
+++ b/core/web/static/css/style.css
@@ -16,6 +16,15 @@ body {
     background: rgba(0, 0, 0, 0.08);
 }
 
+.card {
+    background: rgba(0, 0, 0, 0.11);
+    box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.25);
+}
+
+.card-header {
+    background: rgba(0, 0, 0, 0.11);
+}
+
 .table thead th {
     border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
@@ -55,9 +64,17 @@ body {
     padding: 17.4rem 0;
 }
 
+#weather {
+    padding: 17.4rem 0;
+}
+
 @media (max-width: 86rem) {
     #home {
         padding: 7.5rem 0;
+    }
+
+    #weather {
+        padding: 8.7rem 0;
     }
 }
 
@@ -78,6 +95,9 @@ body {
         width: 100%;
     }
     #home {
+        padding: 2rem 0;
+    }
+    #weather {
         padding: 2rem 0;
     }
 }
