--- a/core/web/static/css/style.css
+++ b/core/web/static/css/style.css
@@ -25,6 +25,13 @@ body {
     background: rgba(0, 0, 0, 0.11);
 }
 
+.card-block {
+    height: 140px;
+    display: table-cell;
+    vertical-align: middle;
+    width: 220px;
+}
+
 .table thead th {
     border-bottom: 2px solid rgba(255, 255, 255, 0.1);
 }
